--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: mysql/mysql-server:8.0
     restart: unless-stopped
     ports:
-      - 3307:3306
+      - "3307:3306" # Hôte : Conteneur
     environment:
-      - MYSQL_ROOT_PASSWORD=
+      - MYSQL_ROOT_PASSWORD= # Remplacez par un mot de passe sécurisé
       - MYSQL_DATABASE=achatdb
     volumes:
       - db:/var/lib/mysql
@@ -19,12 +19,14 @@ services:
     container_name: achat3
     restart: on-failure
     ports:
-      - 8090:8089
+      - "8090:8090" # Corrigé pour correspondre au port de l'application Spring Boot
     environment:
       SPRING_APPLICATION_JSON: '{
+           "server.port": 8090,
+           "server.servlet.context-path": "/SpringMVC",
            "spring.datasource.url": "jdbc:mysql://mysqldb:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC",
            "spring.datasource.username": "root",
-           "spring.datasource.password": null,
+           "spring.datasource.password": "",
            "spring.jpa.show-sql": true,
            "spring.jpa.hibernate.ddl-auto": "update",
            "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL5InnoDBDialect"
@@ -32,11 +34,11 @@ services:
     stdin_open: true
     tty: true
 
-  angularfrontend: # Define the Angular frontend service
+  angularfrontend:
     container_name: my-angular-app3
     image: mariemghadhab/achatfront:2.0.0
     ports:
-      - "4201:80"
+      - "4201:80" # Hôte : Conteneur
     restart: on-failure
 
 volumes:
