--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "3307:3306" # Hôte : Conteneur
     environment:
-      - MYSQL_ROOT_PASSWORD= # Remplacez par un mot de passe sécurisé
+      - MYSQL_ROOT_PASSWORD= 
       - MYSQL_DATABASE=achatdb
     volumes:
       - db:/var/lib/mysql
@@ -26,7 +26,7 @@ services:
            "server.servlet.context-path": "/SpringMVC",
            "spring.datasource.url": "jdbc:mysql://mysqldb:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC",
            "spring.datasource.username": "root",
-           "spring.datasource.password": "",
+           "spring.datasource.password": "your_secure_password",
            "spring.jpa.show-sql": true,
            "spring.jpa.hibernate.ddl-auto": "update",
            "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL5InnoDBDialect"
@@ -43,3 +43,5 @@ services:
 
 volumes:
   db:
+networks:
+  default:
