--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "3307:3306" # Hôte : Conteneur
     environment:
-      - MYSQL_ROOT_PASSWORD= 
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_DATABASE=achatdb
     volumes:
       - db:/var/lib/mysql
